# ocas

./: .gitignore  .hotelreservation.yml  README.md  docker-compose.yaml  hotelreservation.yml  jaeger.yaml  monitor.yaml  monitor.yaml_ca  monitor.yaml_ori  wrk
evaluation/: MicroservicePlacement_NSGA2_gen250.json  config-dev.yaml  config.yaml  docker-compose.yaml  help.md  history.txt  nsga2_yonga_plot.py
evaluation/top-results/: binpack-12k.yaml  yonga-20k.yaml
hotelReservation/: Dockerfile  Dockerfile.ori  go.mod  go.sum
hotelReservation/cmd/frontend/: main.go
hotelReservation/cmd/geo/: main.go
hotelReservation/cmd/profile/: main.go
hotelReservation/cmd/rate/: main.go
hotelReservation/cmd/recommendation/: main.go
hotelReservation/cmd/reservation/: main.go
hotelReservation/cmd/search/: main.go
hotelReservation/cmd/user/: db.go  (+1 more)
hotelReservation/dialer/: dialer.go
jaeger-mongodb/configs/: config.yaml
prometheus/prometheus/: prometheus.yml  prometheus_prrod.yml
scripts/: ilp.py
scripts/hotel-reservation/: mixed-workload_type_1.lua
scripts/yonga/: perf.sh
yonga/: Cargo.toml  binpack_2025-01-21_08-17-12.yml  docker-compose_update.yml  run_ocas_wrk_tests.sh  yonga_2024-07-17_14-51-22.yml  yonga_2024-07-17_14-51-22.yml_ori  yonga_2024-07-27_09-16-11.yml  yonga_2024-07-27_10-05-53.yml  yonga_2024-07-27_10-54-03.yml
yonga/opticas/: Cargo.toml
yonga/opticas/libs/hv-fonseca-et-al-2006-sys-ocas/: Cargo.toml
yonga/opticas/libs/opticas-macros/: Cargo.toml
yonga/opticas/libs/opticas-macros/src/: lib.rs
yonga/opticas/src/algorithms/: algorithm.rs  mod.rs  nsga2opticas.rs  stopping_condition.rs
yonga/opticas/src/core/: constraint.rs  data.rs  error.rs  individual.rs  mod.rs  objective.rs  problem.rs  test_utils.rs  utils.rs  variable.rs
yonga/opticas/src/metrics/: distance.rs  hypervolume.rs  hypervolume_2d.rs  hypervolume_fonseca_2006.rs
yonga/opticas/src/metrics/hv_wfg/: mod.rs
yonga/opticas/src/operators/: comparison.rs  crossover.rs  mod.rs  mutation.rs  selector.rs
yonga/opticas/src/utils/: fast_non_dominated_sort.rs  mod.rs  reference_points.rs
yonga/src/: api.rs  api_client.rs  binpack.rs  deploy.rs  docker_client.rs  lib.rs  lpsolver.rs  main.rs  monitor.rs  node.rs  nsga2.rs  nsga2opticas.rs  random.rs  reactor.rs  solver.rs  spread.rs  stack.rs  strategy.rs  trace.rs  utility.rs  yonga.rs
(+15 files in other folders)
