[package]
name = "yonga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.8"
bson = { version = "2.9", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1.36"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
clap = "4.5"
serde_yaml = "0.9"


[[bin]]
name = "yonga"
path = "src/yonga.rs"