[package]
name = "yonga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.8"
bson = { version = "2.9", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = { version = "1.36", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1" # Used in the Map Data into Structs section
clap = "4.5.7"
serde_yaml = "0.9"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0"
regex = "1.5"
prometheus-http-query= "0.8.3"
actix-web = "4"
futures = "0.3"
rand = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
optirustic = { path = "./optirustic" }
opticas = { path = "./opticas" }

[[bin]]
name = "ocas"
path = "src/main.rs"

[[bin]]
name = "monitor"
path = "src/monitor.rs"

[[bin]]
name = "api"
path = "src/api.rs"

[[bin]]
name = "reactor"
path = "src/reactor.rs"

[[bin]]
name = "deploy"
path = "src/deploy.rs"

[[bin]]
name = "lpsolver"
path = "src/lpsolver.rs"